fix: scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,19 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 0px !important;
+}
+
+/* ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  height: 200px;
+} */
+
+/* ::-webkit-scrollbar-track {
+  background-color: transparent;
+} */
+
 @layer utilities {
   .flex-center {
     @apply flex justify-center items-center;
